// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> it renders a dark Wrapper 1`] = `
<div>
  <div
    class="sc-bcXHqe hfBrsm"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a default Wrapper 1`] = `
<div>
  <div
    class="sc-bcXHqe iZNGAq"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a light Wrapper 1`] = `
<div>
  <div
    class="sc-bcXHqe jRVggQ"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a main Wrapper 1`] = `
<div>
  <div
    class="sc-bcXHqe cNxiCn"
  >
    this is a Button 
    main
     
  </div>
</div>
`;

exports[`<Wrapper /> should render a large wrapper 1`] = `
<div>
  <div
    class="sc-bcXHqe cankcE"
  >
    I am a large wrapper
  </div>
</div>
`;
